# LSM7002M_RISC-V_driver

./: .gitignore  README.md  platformioworkspace.code-workspace  workspace.code-workspace
Cli/: CMakeLists.txt  basicTX.cpp
Documentation/: .~lock.SetSamplingFrequency.odp#  .~lock.byKeyword.xlsx#  .~lock.bydtatype.xlsx#  GUI_TABLE.csv  LimeAPI_descruption.xlsx  LimeAPIs_description_and_manual.csv  LimeAPIs_description_and_manual.xlsx  ReporteLimeFuncionando.odt  ReporteLimeTX.docx  SetSamplingFrequency.odp  Untitled 2.odp  byKeyword.xlsx  bydtatype.xls  bydtatype.xlsx  bydtatype2.xlsx
Documentation/DataFrames/: Lime_set_data_clock.csv  Lime_set_data_clock_2.csv  Lime_set_data_clock_3.csv  Lime_set_data_clock_5.csv  Lime_set_data_clock_6.csv  Lime_set_data_clock_7.csv
Documentation/Images/FrequencyCaptures/: cmake_lime_tx
FPGA_FW/: README.md  SPI_STM.sh
FPGA_FW/openOCD/: Makefile  Makefile.in  config.status  libtool
FPGA_FW/openOCD/autom4te.cache/: requests
FPGA_FW/openOCD/doc/: openocd.info  openocd.info-1  openocd.info-2  version.texi
FPGA_FW/openOCD/src/flash/nor/.deps/: dupin_nor_spi.Plo
FPGA_FW/openOCD/src/helper/.deps/: src_helper_libhelper_la-options.Plo
FPGA_FW/openOCD/src/jtag/.deps/: adapter.Plo
FPGA_FW/openOCD/src/jtag/drivers/.deps/: src_jtag_drivers_libocdjtagdrivers_la-bitbang.Plo  src_jtag_drivers_libocdjtagdrivers_la-dummy.Plo  src_jtag_drivers_libocdjtagdrivers_la-jtag_tcp.Plo  src_jtag_drivers_libocdjtagdrivers_la-libusb1_common.Plo  src_jtag_drivers_libocdjtagdrivers_la-usb_common.Plo
FirmwareDev/: platformio.ini
FirmwareDev/include/interfaces/: sysfs_gpio_interface.h  xilinx_user_gpio.h
FirmwareDev/src/: main.c
FirmwareDev/src/LMS7002M_lib/: LMS7002M_impl.h  LMS7002M_sxx.c  LMS7002M_time.c  LMS7002M_tx_filter_cal.c
FirmwareDev/src/memory_broker/: InjectDescription.py  broker.c  broker.h  isr_handlers.c  parser.c
FirmwareDev/src/platform_generic/: platform.c  platform.h  util.c
GUI/: CMakeLists.txt  LimeGui.py  main.cpp  pnlAPI.cpp  pnlAPI.h  training.cpp  training.h
GUI/LIMEGUI/: CMakeLists.txt  CMakeLists.txt.user.9e17c60  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_temp.ui
GUI/LIMEGUI/Bridge/: CMakeLists.txt  bridge.cpp  bridge.h
GUI/LIMEGUI/Menu_Backend/: CMakeLists.txt  Input_text.cpp  Load_File.cpp  Sci_units.cpp  description.h
GUI/LIMEGUI/Menu_Frontend/: CMakeLists.txt  common.h  description.cpp  function_type.h  submenus.h
GUI/Mixed_widgets_QT/QTLibs/Bridge/: bridge.cpp
GUI/Mixed_widgets_QT/src/: CMakeLists.txt  client.cpp  client.h  pnlAPI.cpp  pnlAPI.h
GUI/QTLibs/Bridge/: CMakeLists.txt  Server.cpp  Server.h  main.cpp
GUI/src/: CMakeLists.txt  pnlAPI.cpp
GUI/src/Bridge/: CMakeLists.txt  bridge.cpp
Installers/: Install.md
coprocessorInt/: platformio.ini
coprocessorInt/include/LMS7002M/: LMS7002M.h
coprocessorInt/include/interfaces/: spidev_interface.h  xilinx_user_mem.h
coprocessorInt/src/: main.c
coprocessorInt/src/LMS7002M_lib/: LMS7002M_cgen.c  LMS7002M_filter_cal.c  LMS7002M_filter_cal.h  LMS7002M_impl.c  LMS7002M_impl.h  LMS7002M_logger.c  LMS7002M_nco.c  LMS7002M_rbb.c  LMS7002M_rfe.c  LMS7002M_rx_filter_cal.c  LMS7002M_rxtsp.c  LMS7002M_sxx.c  LMS7002M_trf.c  LMS7002M_tx_filter_cal.c  LMS7002M_txtsp.c  LMS7002M_vco.c
coprocessorInt/src/memory_broker/: broker.c  broker.h  isr_handler.h  isr_handlers.c  parser.c  parser.h
coprocessorInt/src/platform_generic/: util.h
scripts/: .~lock.bydtatype.csv#  ApiClassification.py  ExportAPItoXLS.py  FromExcelToCode.py  GUI_Labels.py  LimeAPI.csv  byKeyword.csv  bydtatype.csv  submenus.h
test/: access_test.c
